# solo-dev-hub

./: .gitattributes  .gitignore  .tbls.yml  CONTRIBUTING.md  Changelog.md  Changelog.ru.md  LICENSE  README.md  README.ru.md  package-lock.json  package.json  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  export.rs  git_ops.rs  keyring_store.rs  lib.rs  main.rs  models.rs  sync.rs  template_meta.rs  template_render.rs  template_seeder.rs
src-tauri/src/commands/: bug.rs  dashboard.rs  deploy.rs  misc.rs  mod.rs  project.rs  repo.rs  sync.rs  templates.rs  timeline.rs
src-tauri/src/crypto/: bundle_cipher.rs  mod.rs
src-tauri/src/db/: bugs.rs  bundle.rs  dashboard.rs  deploy.rs  deploy_secret_values.rs  graph.rs  migrations.rs  mod.rs  projects.rs  repos.rs  stats.rs  tasks_events.rs  timeline.rs
src-tauri/src/export/: bugs.rs  bugs_legacy.rs  deploy_csv.rs  mod.rs  todo_done.rs  util.rs
src-tauri/src/models/: bugs.rs  bundle.rs  core.rs  dashboard.rs  deploy.rs  graph.rs  mod.rs  stats.rs  sync.rs  tasks.rs  templates.rs  timeline.rs
src-tauri/src/sync/: autocommit.rs  bugs.rs  claude_md.rs  fs.rs  gitattributes.rs  gitignore.rs  managed_block.rs  mod.rs  project_md.rs  project_sync.rs  requirements.rs  skills.rs  tasks.rs
src-tauri/templates/_global/: .gitattributes.tmpl  .gitignore.tmpl  bug-reports.md.tmpl  claude.md.global.tmpl  claude.md.section.tmpl  skill.sdh-api-contract-consume.md.tmpl  skill.sdh-api-contract-maintain.md.tmpl  todo.md.tmpl  (+13 more)
(+199 files in other folders)
